@@ -1,10 +1,8 @@
 package com.company;
 
-import java.io.*;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Stream;
+import java.io.IOException;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toList;
 
@@ -12,17 +10,17 @@ public class HKleaderboard {
     public static void main(String[] args) throws IOException {
 
 
-        BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(new FileInputStream("C:\\Users\\Dao Manh\\IdeaProjects\\lean_300\\src\\com\\company\\resouces\\input08.txt")));
-        int rankedCount = Integer.parseInt(bufferedReader.readLine().trim());
-        List<Integer> ranked = Stream.of(bufferedReader.readLine().replaceAll("\\s+$", "").split(" "))
-                .map(Integer::parseInt)
-                .collect(toList());
-
-        int playerCount = Integer.parseInt(bufferedReader.readLine().trim());
-
-        List<Integer> player = Stream.of(bufferedReader.readLine().replaceAll("\\s+$", "").split(" "))
-                .map(Integer::parseInt)
-                .collect(toList());
+//        BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(new FileInputStream("C:\\Users\\Dao Manh\\IdeaProjects\\lean_300\\src\\com\\company\\resouces\\input08.txt")));
+//        int rankedCount = Integer.parseInt(bufferedReader.readLine().trim());
+//        List<Integer> ranked = Stream.of(bufferedReader.readLine().replaceAll("\\s+$", "").split(" "))
+//                .map(Integer::parseInt)
+//                .collect(toList());
+//
+//        int playerCount = Integer.parseInt(bufferedReader.readLine().trim());
+//
+//        List<Integer> player = Stream.of(bufferedReader.readLine().replaceAll("\\s+$", "").split(" "))
+//                .map(Integer::parseInt)
+//                .collect(toList());
 
 //        List<Integer> ranked = new ArrayList<>(Arrays.asList(100, 100, 50, 40, 20, 10));
 //        String inputRanked = "295 294 291 287 287 285 285 284 283 279 277 274 274 271 270 268 268 268 264 260 259 258 257 255 252 250 244 241 240 237 236 236 231 227 227 227 226 225 224 223 216 212 200 197 196 194 193 189 188 187 183 182 178 177 173 171 169 165 143 140 137 135 133 130 130 130 128 127 122 120 116 114 113 109 106 103 99 92 85 81 69 68 63 63 63 61 57 51 47 46 38 30 28 25 22 15 14 12 6 4";
@@ -31,42 +29,33 @@ public class HKleaderboard {
         String inputPlayed = "5 25 50 120";
         List<String> inputRankedStr = Arrays.asList(inputRanked.split(" "));
         List<String> inputPlayedStr = Arrays.asList(inputPlayed.split(" "));
-        List<Integer> collectRanked = inputRankedStr.stream().map(Integer::parseInt).toList();
-        List<Integer> collectPlayed = inputPlayedStr.stream().map(Integer::parseInt).toList();
+        List<Integer> collectRanked = inputRankedStr.stream().map(Integer::parseInt).collect(toList());
+        List<Integer> collectPlayed = inputPlayedStr.stream().map(Integer::parseInt).collect(toList());
 //        List<Integer> player = new ArrayList<>(Arrays.asList(5, 25, 50, 120));
         climbingLeaderboard(collectRanked, collectPlayed).forEach(System.out::println);
 
     }
 
     public static List<Integer> climbingLeaderboard(List<Integer> ranked, List<Integer> player) {
-        List<Integer> lstResult = new ArrayList<>(player);
-        int localValue = Integer.MAX_VALUE;
-        int indexPlayer = player.size() - 1;
+        List<Integer> result = new ArrayList<>();
+        int rank = 1;
+        int indexScore = player.size() - 1;
         int indexRank = 0;
-
-        for (int i = 0; i < ranked.size(); i++) {
-            Integer valueRanked = ranked.get(i);
-            if (localValue > valueRanked) {
-                localValue = valueRanked;
+        int preValue = Integer.MAX_VALUE;
+        while (indexScore >= 0) {
+            Integer valueScore = player.get(indexScore);
+            while (indexRank < ranked.size() && valueScore < ranked.get(indexRank)) {
+                if (preValue != ranked.get(indexRank))
+                    rank++;
+                preValue = ranked.get(indexRank);
                 indexRank++;
             }
 
-            while (indexPlayer > -1 && lstResult.get(indexPlayer) >= localValue) {
-                lstResult.set(indexPlayer, indexRank);
-                indexPlayer--;
-            }
+            indexScore--;
+            result.add(rank);
         }
-
-        if (indexPlayer > -1) {
-            ++indexRank;
-            while (indexPlayer > -1){
-                lstResult.set(indexPlayer,indexRank );
-                indexPlayer--;
-
-            }
-        }
-
-        return lstResult;
+         Collections.reverse(result);
+        return result;
     }
 
 }
